# quizler

./: README.md  captain-definition  cspell.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-frontend.yml  build-release.yml  build.yml  publish-docker-hub.yml  publish-ghcr.yml
backend/: Cargo.toml
backend/src/: config.rs  game.rs  games.rs  http.rs  main.rs  msg.rs  session.rs  session_store.rs  signing.rs
backend/src/game/: answer.rs  config.rs  manager.rs  mod.rs  player.rs
backend/src/http/: create.rs  image.rs  mod.rs  public.rs  socket.rs
frontend/: .prettierrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/plugins/: svelte-svg-component.ts
frontend/src/: App.svelte  global.d.ts  main.ts
frontend/src/assets/: app.css  app.scss  dark.css  light.css  schemeDark.scss  schemeLight.scss
frontend/src/lib/: constants.ts
frontend/src/lib/api/: actions.ts  models.ts
frontend/src/lib/api/models/: answer.ts  clientMessage.ts  game.ts  image.ts  index.ts  nameFiltering.ts  question.ts  score.ts  serverError.ts  (+3 more)
frontend/src/lib/components/: Checkbox.svelte  FloatingBackButton.svelte  FloatingLoader.svelte  FloatingModal.svelte  GlobalDialog.svelte  HomeActionButton.svelte  ImageStorage.svelte  Spinner.svelte  TimeInput.svelte  TweenedValue.svelte
frontend/src/lib/pages/: Connect.svelte  Create.svelte  Game.svelte  Home.svelte
frontend/src/lib/stores/: socket.svelte.ts  state.svelte.ts  timerStore.svelte.ts
frontend/src/lib/utils/: format.ts
(+20 files in other folders)
